--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:studio": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.9.1",
     "@radix-ui/react-slot": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.13.4",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.28",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
