adding ability to upload images - supabase config

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.1",
     "@radix-ui/react-slot": "^1.2.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@t3-oss/env-nextjs": "^0.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
