--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "next-auth": "^5.0.0-beta.28",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
