--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "@tailwindcss/postcss": "^4.1.7",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "eslint": "^9",
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
