--- a/package.json
+++ b/package.json
@@ -35,13 +35,12 @@
     "zod": "^3.24.4",
     "eslint": "^9",
     "tw-animate-css": "^1.2.9"
+    "eslint-config-next": "15.3.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint-config-next": "15.3.2",
     "tailwindcss": "^4.1.7",
     "typescript": "^5"
   }
