--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "zod": "^3.24.4",
     "eslint": "^9",
-    "tw-animate-css": "^1.2.9"
+    "tw-animate-css": "^1.2.9",
     "eslint-config-next": "15.3.2"
   },
   "devDependencies": {
