--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
     "@t3-oss/env-nextjs": "^0.13.4",
+    "@tailwindcss/postcss": "^4.1.7",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.43.1",
     "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.43.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
@@ -31,11 +34,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
-    "@tailwindcss/postcss": "^4.1.7",
-    "zod": "^3.24.4",
-    "eslint": "^9",
     "tw-animate-css": "^1.2.9",
-    "eslint-config-next": "15.3.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^20",
