--- a/render.yaml
+++ b/render.yaml
@@ -22,9 +22,16 @@ services:
       - key: AUTH_GOOGLE_SECRET
         sync: false
 
+      # Facebook OAuth credentials
+      - key: AUTH_FACEBOOK_ID
+        sync: false
+      - key: AUTH_FACEBOOK_SECRET
+        sync: false
+
       # Add the missing NEXTAUTH_URL for production
       - key: NEXTAUTH_URL
-        value: https://auction-app-u4q7.onrender.com
+        value: http://localshost:3000
+        # value: https://auction-app-u4q7.onrender.com
 
       - key: NEXT_PUBLIC_SUPABASE_URL
         sync: false
