--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:studio": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
+    "drizzle-kit": "^0.31.1",
     "@auth/drizzle-adapter": "^1.9.1",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.5",
