--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
+    "embla-carousel-react": "^8.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "lucide-react": "^0.509.0",
@@ -38,10 +39,10 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.31.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.1",
     "eslint_d": "^14.3.0",
     "tailwindcss": "^4.1.7",
     "tsx": "^4.20.3",
