--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,7 +57,8 @@
     ".next/types/**/*.ts",
     "src/app/api/bids.ts.bak",
     "src/app/items/live/page.tsx.bak",
-    "src/components/SigninFacebook.tsx.bak"
+    "src/components/SigninFacebook.tsx.bak",
+    "src/app/Header.tsx.bak"
   ],
   "exclude": ["node_modules"]
 }
