--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "lucide-react": "^0.509.0",
+    "motion": "^12.23.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "postcss": "^8.5.3",
