--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "motion": "^12.23.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
+    "pdfkit": "^0.17.1",
     "postcss": "^8.5.3",
     "postgres": "^3.4.7",
     "pusher": "^5.2.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdfkit": "^0.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv-cli": "^8.0.0",
