--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.509.0",
     "motion": "^12.23.0",
     "next": "15.3.2",
@@ -43,6 +44,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/pdfkit": "^0.14.0",
     "@types/react": "^19",
