--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "imagekitio-next": "^1.0.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.509.0",
     "motion": "^12.23.0",
@@ -49,7 +50,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv-cli": "^8.0.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "eslint_d": "^14.3.0",
     "tailwindcss": "^4.1.7",
     "tsx": "^4.20.3",
